Added background image and updated HTML

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="he">
 <head>
   <meta charset="UTF-8" />
-  <title>הספירה של יעל – ללא סופ"ש + אפקט קאונטר</title>
+  <title>הספירה של יעל –  + אפקט קאונטר</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- animate.css לאנימציות -->
@@ -218,13 +218,13 @@
 
   <div class="main-layout">
     <header id="headerArea" class="animate__animated">
-      <h1>הספירה של יעל עד ללידה (ללא סופ"ש)</h1>
+      <h1>הספירה של יעל עד ללידה </h1>
       <div id="quote" class="encouraging-message animate__animated"></div>
     </header>
 
     <div id="mainContainer" class="container animate__animated">
       <!-- ספירה לאחור -->
-      <div class="countdown-title">ימי עבודה שנותרו עד 2 בספטמבר 2025 (שעות,דקות,שניות - ריאליות):</div>
+      <div class="countdown-title">ימי עבודה שנותרו עד ללידה:</div>
       <div class="countdown" id="countdown">
         <div>
           <span id="days">0</span>
@@ -254,7 +254,7 @@
       <div class="baby-size" id="babySize"></div>
 
       <!-- טבלת ימי עבודה (ללא סופ"ש) -->
-      <div class="grid-title">טבלת ימי עבודה (ללא סופ"ש)</div>
+      <div class="grid-title">טבלת ימי עבודה </div>
       <div class="grid" id="daysGrid"></div>
     </div>
   </div>
